--- a/sharedstyle.css
+++ b/sharedstyle.css
@@ -11,78 +11,6 @@ padding: 0;
     z-index: 100;
     background: rgba(0, 0, 0, 0.5);
     display: none;
-    
-}
-
-.navbar {
-    
-    width: 85%;
-    margin: auto;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.navbar ul li {
-    display: none;
-}
-.main-logo {
-    width: 120px;
-    cursor: pointer;
-    color: white;
-    font-weight: bold;
-}
-
-@media (min-width:42.5rem) {
-    /* .navbar {
-        width: 90%;
-        margin: auto;
-    } */
-    .navbar ul li {
-        display: inline-block;
-        padding-left: 10px;
-    }
-    .navbar ul li a{
-        text-decoration: none;
-        color: white;
-        font-weight: bold;
-        text-transform: uppercase; 
-    }
-    /* .navbar ul li:hover {
-        border-bottom: 3px solid #3ff00965;
-    } */
-    .toggle-button {
-        display: none;
-    }
-} 
-
-@media (min-width:55rem) {
-    .navbar ul li {
-        list-style: none;
-        display: inline-block;
-        margin: 0 20px;
-        position: relative;
-    }
-    .navbar ul li a{
-        text-decoration: none;
-        color: white;
-        font-weight: bold;
-        text-transform: uppercase; 
-    }
-    /* .navbar ul li:hover {
-        border-bottom: 3px solid #3ff00965;
-    } */
-    .CTA-offer  {
-        color: white !important;
-        background: blue;
-        padding: 8px 16px;
-        border-radius: 8px;
-    }
-    
-    .CTA-offer:hover {
-        background: white !important;
-        color: black !important;
-    }
 }
 .toggle-button {
     width: 3rem;
@@ -105,6 +33,96 @@ padding: 0;
     display: block;
     margin: 0.6rem 0;
 }
+
+button:focus {
+    outline: none;
+}
+.navbar {
+    width: 85%;
+    margin: auto;
+    padding: 20px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* position: fixed;
+    z-index: 1; */
+}
+.navbar ul li {
+    display: none;
+}
+.main-logo {
+    width: 120px;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    font-family: proxima-nova, Arial, "Lucida Grande", sans-serif;
+}
+
+@media (min-width:42.5rem) {
+    /* .navbar {
+        width: 90%;
+        margin: auto;
+    }  */
+    .navbar ul li {
+        display: inline-block;
+        padding-left: 10px;
+    }
+    .navbar ul li a{
+        text-decoration: none;
+        color: white;
+        font-family: proxima-nova, Arial, "Lucida Grande", sans-serif;
+        font-weight: bold;
+        text-transform: uppercase; 
+    }
+    .navbar ul li .li-links::after {
+        content: '';
+        height: 3px;
+        width: 0;
+        background:rgb(78, 78, 199);
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+        transition: 0.5s;
+    }
+    .navbar ul li .li-links:hover::after{
+        width: 100%;
+    } 
+    .CTA-offer {
+        color: white !important;
+        background: blue;
+        padding: 8px 16px;
+        border-radius: 8px;
+    }
+
+    .CTA-offer:hover {
+        background: white;
+        color: black !important;
+    }
+    
+    .toggle-button {
+        display: none;
+    }
+} 
+
+@media (min-width:55rem) {
+    .navbar ul li {
+        list-style: none;
+        display: inline-block;
+        margin: 0 20px;
+        position: relative;
+    }
+    .navbar ul li a{
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        text-transform: uppercase; 
+    }
+    /* .navbar ul li:hover {
+        border-bottom: 3px solid #3ff00965;
+    } */
+    
+}
+
 @media (min-width: 55rem) {
     .toggle-button {
         display: none;
@@ -115,34 +133,39 @@ padding: 0;
     display: none;
     position: fixed;
     z-index: 101;
-    top: 0;
+    top: 10%;
     left: 30%;
-    background: #110d0d;
+    background: white;
     width: 80%;
     height: 100vh;
-    border-top-left-radius: 15%;
-    border-bottom-left-radius: 20%;
+    border-top-left-radius: 5px;
   }
-  .mobile-nav ul li {
+
+  .mobile-nav_items {
+    width: 90%;
+    height: 90%;
+    margin:auto ;
     list-style: none;
-    margin: 10px auto;
-    position: relative;
-    padding: 30px 40px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+} 
+.mobile-nav_items li {
+    margin: 1rem 0;
 }
-.mobile-nav ul li a{
+.mobile-nav_items li a{
     text-decoration: none;
-    color: white;
-    font-size: 1rem;
+    color: black;
+    font-size: 1.5rem;
     font-weight: bold;
     text-transform: uppercase; 
+    font-family: proxima-nova, Arial, "Lucida Grande", sans-serif;
 } 
 /* Start CTA design for mobile responsiveness */
 .CTA-offer {
-    color: white;
+    color: white !important;
     background: blue;
     padding: 8px 16px;
     border-radius: 8px;
